--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
+    "yup": "^1.3.2",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
