feat: adding 3rd bot

--- a/backend/web-bot/.env
+++ b/backend/web-bot/.env
@@ -1,3 +1,4 @@
 OPENAI_API_KEY=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
+OPENAI_API_KEY2=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
 MONGODB_URI=mongodb+srv://s1103treactnode:ga1Rg5IArgiquiLS@mydb.bwvaa78.mongodb.net/
 PORT:5040
