--- a/backend/chatgpt-chatbot-main/package.json
+++ b/backend/chatgpt-chatbot-main/package.json
@@ -12,6 +12,7 @@
     "license": "MIT",
     "dependencies": {
         "colors": "^1.4.0",
+        "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "nodemon": "^3.0.2",
