--- a/backend/chatgpt-chatbot-main/package.json
+++ b/backend/chatgpt-chatbot-main/package.json
@@ -15,6 +15,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "fs": "^0.0.1-security",
         "nodemon": "^3.0.2",
         "openai": "^4.20.1",
         "readline-sync": "^1.4.10"
