--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "build ./app.js",
     "start": "node ./app.js",
     "dev": "nodemon ./app.js"
   },
@@ -15,8 +16,12 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "firebase": "^10.7.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^6.0.12"
+    "mongoose": "^6.0.12",
+    "multer": "^1.4.5-lts.1",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
